--- a/Backend/LMS/src/main/resources/application.properties
+++ b/Backend/LMS/src/main/resources/application.properties
@@ -1,13 +1,16 @@
 spring.application.name=LMS
-spring.datasource.url=jdbc:mysql://localhost:3306/LMS?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
 
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/LMS
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-#spring.sql.init.mode=always
-#spring.sql.init.encoding=UTF-8
-#spring.sql.init.data-locations=classpath:db/data.sql
+spring.sql.init.mode=always
+spring.sql.init.encoding=UTF-8
+spring.sql.init.data-locations=classpath:db/data.sql
